// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button With Jest snapshot, <Button /> component renders with a child node 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-root-1 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <p>
      Click Me
    </p>
  </span>
</button>
`;

exports[`Button With Jest snapshot, Button component renders with a child as string 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-root-1 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Click Me
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
